easy-gray-api/src/test/resources/k8s/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: qa
  name: easy-gray-gateway-api
  labels:
    app: easy-gray-gateway-api
    release: easy-gray-gateway-api
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate

  selector:
    matchLabels:
      app: easy-gray-gateway-api
      release: easy-gray-gateway-api
  template:
    metadata:
      labels:
        app: easy-gray-gateway-api
        release: easy-gray-gateway-api
    spec:
      imagePullSecrets:
        - name: ali-docker-auth
      containers:
        - name: easy-gray-gateway-api
          image: registry.cn-hangzhou.aliyuncs.com/ranmo/easy-gray-gateway-api:7
          command:
            - sh
            - -c
            - (sh /usr/local/easy-gray-gateway-api/run.sh)

          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          #          livenessProbe:
          #            httpGet:
          #              path: /healthz
          #              port: http
          #            initialDelaySeconds: 5

          resources:
            limits:
              cpu: 2
              memory: 2048Mi
            requests:
              cpu: 0.1
              memory: 1024Mi
