easy-gray-api/src/test/resources/k8s/k8s.yaml
---
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: qa
  name: easy-gray-gateway-api
  labels:
    app: easy-gray-gateway-api
    release: easy-gray-gateway-api
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate

  selector:
    matchLabels:
      app: easy-gray-gateway-api
      release: easy-gray-gateway-api
  template:
    metadata:
      labels:
        app: easy-gray-gateway-api
        release: easy-gray-gateway-api
    spec:
      imagePullSecrets:
        - name: ali-docker-auth
      containers:
        - name: easy-gray-gateway-api
          image: registry.cn-hangzhou.aliyuncs.com/ranmo/easy-gray-gateway-api:2
          command:
            - sh
            - -c
            - (sh /usr/local/easy-gray-gateway-api/run.sh)

          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          #          livenessProbe:
          #            httpGet:
          #              path: /healthz
          #              port: http
          #            initialDelaySeconds: 5

          resources:
            limits:
              cpu: 1
              memory: 1024Mi
            requests:
              cpu: 0.1
              memory: 1024Mi

---
# Source: service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: qa
  name: easy-gray-gateway-api
  labels:
    app: easy-gray-gateway-api
    release: easy-gray-gateway-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: easy-gray-gateway-api
    release: easy-gray-gateway-api


---
# Source:ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: qa
  name: easy-gray-gateway-api
  labels:
    app: easy-gray-gateway-api
    release: easy-gray-gateway-api

spec:
  rules:
    - host: easy-gray-gateway-api.rainxx.top
      http:
        paths:
          - path: /
            backend:
              serviceName: easy-gray-gateway-api
              servicePort: http
